--- a/Document/Files/1_Introduction.tex
+++ b/Document/Files/1_Introduction.tex
@@ -5,6 +5,8 @@
 
 
 \mysubsection{Scope}
+EasyLib is a mobile application that manage to make easier multiple management tasks that nowadays a library needs to deal with. It answers all the questions for which a library visitor usually stuck for an answer such as books description and availability, waiting queue for reserve a book, events taking place and news related to the library, and make really easy to the book search and reservation. The application allow the user to interface with all the libraries that choose to use EasyLib as management system, using a single identification process to interact with all of them.
+EasyLib has been thought to cover also the Librarian necessity and help him into his daily work automatizing the book delivering and returning process and helping him to schedule his work. However, the librarian system that we are going to present in this document is a prototype with a fraction of the functionalities that have been designed and are left to a future upgraded of the app.
 
 
 \mysubsection{Definitions}
