[DOC] Update document

--- a/Document/EasyLib.tex
+++ b/Document/EasyLib.tex
@@ -11,7 +11,7 @@
 			\\[3cm]
 		\end{figure}		
 		\vspace{65mm}
-		\textcolor{Blue}{\textbf{\huge EASYLIB \\\vspace{2mm} + \\\vspace{5mm} EASYLIB - Librarian}}\\[15mm]
+		\textcolor{Blue}{\textbf{\huge EASYLIB}}\\[15mm]
 		\textcolor{Blue}{\textbf{\huge DD}}\\[4mm]
 		{\textcolor{Blue}{\textbf{\Large{Design Document}}}}\\
 		\vspace{30mm}
