--- a/Document/EasyLib.tex
+++ b/Document/EasyLib.tex
@@ -7,18 +7,23 @@
 		\begin{figure}
 			\vspace*{0mm}
 			\centering
-			\includegraphics[scale=0.3]{Images/Polimi_Logo}
-			\\[3cm]
-		\end{figure}		
-		\vspace{65mm}
+			\includegraphics[scale=0.3]{Images/EasyLib_Logo}
+			\\[2cm]
+		\end{figure}
+		\vspace{5mm}
 		\textcolor{Blue}{\textbf{\huge EASYLIB}}\\[15mm]
 		\textcolor{Blue}{\textbf{\huge DD}}\\[4mm]
 		{\textcolor{Blue}{\textbf{\Large{Design Document}}}}\\
 		\vspace{30mm}
 		\textit{\large Kostandin Caushi 898749}\\[3mm]
 		\textit{\large Raffaele Bongo 900090}\\[3mm]
-		\vspace{30mm}
-		Date 12/02/2019
+		\vspace*{30mm}
+		Date 12/02/2019\\[1cm]
+		\begin{figure}[h]
+			\begin{flushright}
+				\includegraphics[scale=0.13]{Images/Polimi_Logo}
+			\end{flushright}
+		\end{figure}
 	\end{titlepage}
 
 %------------------------------
